# py4phi

./: .coveragerc  .gitignore  .readthedocs.yaml  LICENSE  NOTICE  README.md  conf.py  examples.sh  log4j.properties  pyproject.toml  requirements-test.txt  requirements.txt  ruff-test.toml  ruff.toml  setup.py
.github/workflows/: CI.yml
cli/: cli_main.py  descriptions.py  utils.py
cli/analytics/: feature_selection.py  principal_component_analysis.py
cli/encryption/: encryption.py  encryption_cli.py  model_encryption.py
examples/: analysis_feature_selection_examples.py  analysis_pca_examples.py  cli_examples.sh  dataset.csv  encryption_decryption_examples.py  model_encryption_decryption_examples.py
py4phi/: __init__.py  base_reader.py  config_processor.py  consts.py  controller.py  core.py  logger_setup.py  utils.py
py4phi/_encryption/: _encryptor.py  _model_encryptor.py  _pandas_encryptor.py  _polars_encryptor.py  _pyspark_encryptor.py
py4phi/analytics/: base_analytics.py  feature_selection.py  principal_component_analysis.py
py4phi/dataset_handlers/: base_dataset_handler.py  pandas_dataset_handler.py  polars_dataset_handler.py  pyspark_dataset_handler.py  pyspark_write_utils.py
py4phi/readers/: pyspark_reader.py
py4phi/readers/base_readers/: base_reader.py
tests/: conftest.py
tests/unit/: conftest.py  test_base_reader.py  test_config_processor.py  test_pyspark_dataset_handler.py  test_pyspark_reader.py
tests/unit/dataset_handlers/: test_base_dataset_handler.py  test_pandas_dataset_handler.py  test_pyspark_dataset_handler.py  test_pyspark_write_utils.py
tests/unit/encryption/: test_model_encryptor.py  test_pandas_encryptor.py  test_pyspark_encryptor.py
tests/unit/py4phi/: test_config_processor.py  test_controller.py  test_core.py  test_utils.py
tests/unit/py4phi/analytics/: test_base_analytics.py  test_feature_selection.py  test_pricipal_component_analysis.py
tests/unit/py4phi/dataset_handlers/: test_pandas_dataset_handler.py  test_polars_dataset_handler.py  test_pyspark_dataset_handler.py  test_pyspark_write_utils.py
tests/unit/py4phi/encryption/: test_base_encryptor.py  test_model_encryptor.py  test_pandas_polars_encryptors.py  test_pyspark_encryptor.py
