[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["py4phi*", "cli*"]
exclude = ["tests*", "scripts*"]

[tool.pytest.coverage.run]
omit = [
    "*/__init__.py",
    "*/tests/*",
    "*/venv/*"
]

[project]
name="py4phi"
requires-python = "^3.10"
license={file="LICENSE"}
version = "1.0.0"
description="A library for encryption/decryption and analysis of sensitive data."
authors = [
  {name = "Volodymyr Kiriushyn", email = "zalorderon3331@gmail.com" }
]
dependencies = [
    "iniconfig>=2.0.2,<3.0.0",
    "packaging>=23.2,<24.0",
    "pluggy>=1.3.1,<2.0.0",
    "py4j>=0.10.10,<0.11.0",
    "pyspark>=3.5.0,<3.6.0",
    "configparser-crypt>=1.1.1,<2.0.0",
    "pycryptodome>=3.10.1,<4.0.0",
    "pandas>=2.3.3,<3.0.0",
    "pyarrow>=15.0.1,<16.0.0",
    "polars>=0.21.0,<0.22.0",
    "click>=8.2.0,<9.0.0",
    "scikit-learn>=1.4.3,<1.5.0",
    "scipy>=1.12.1,<1.13.0"
]

[project.scripts]
cli = "cli.cli_main:main"


[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
    "mypy==1.8.0",
    "ruff==0.1.3"
]

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {"py4phi" = ["log4j.properties"]}